feat: implemented artists resource
