# doc/api.yaml
@@ -246,6 +246,7 @@ paths:
         required: true
         schema:
           type: string
+          format: uuid
     get:
       tags:
         - User
@@ -621,7 +622,7 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
-  /artists:
+  /artist:
     get:
       tags:
         - Artist
@@ -668,7 +669,7 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /artists/{id}:
+  /artist/{id}:
     parameters:
       - name: id
         in: path
